# Serene

./: .ccls  .ci.yml  .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  .golangci.yaml  .ignore_sanitize  .pre-commit-config.yaml  .rusty-hook.toml  CMakeLists.txt  Cargo.toml  Jenkinsfile  LICENSE  Makefile  README.org  builder  builder.sh  dev.org
bootstrap/: .golangci.yaml  Cargo.toml  Dockerfile  Makefile  README.org  go.mod  go.sum  main.go  serene.go
bootstrap/cmd/: repl.go  root.go  run.go
bootstrap/examples/: hello-world.srn
bootstrap/grammar/: Dockerfile  Serene.g4
bootstrap/src/: ast.rs  builtins.rs  cli.yml  compiler.rs  core.rs  errors.rs  main.rs  namespace.rs  reader.rs  repl.rs  runtime.rs  scope.rs  types.rs
cmake/: #tablegen-serene.cmake#  .#tablegen-serene.cmake  cotire.cmake  tablegen-serene.cmake
core/: CMakeLists.txt
core/include/serene/core/: core.h  reader.h
core/lib/: CMakeLists.txt  compiler.cpp  reader.cpp
core/lib/serene/: CMakeLists.txt  compiler.cpp.inc  core.cpp  reader.cpp.inc
devtools/: CMakeLists.txt  slir-lsp-server.cpp  slir-opt.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt  spec.org  videos.org
docs/examples/: hello_world.srn
docs/examples/slir/: hello_world.mlir
examples/hello_world/: hello_world.srn
include/: CMakeLists.txt  config.h.in  serene_precompiles.h
include/serene/: compiler.hpp  config.h.in  errors.h  (+21 more)
libserene/: CMakeLists.txt
libserene.v0/: CMakeLists.txt
libserene/cmake/: SereneConfig.cmake.in
libserene/include/: CMakeLists.txt
libserene/include/serene/: config.h.in  context.h  conventions.h  diagnostics.h  environment.h  errors.h  fs.h  namespace.h  options.h  passes.h  semantics.h  serene.h  source_mgr.h  traits.h  utils.h
libserene/include/serene/errors/: base.h  errc.h
libserene/include/serene/exprs/: call.h  expression.h  fn.h  list.h  number.h  symbol.h
libserene/include/serene/jit/: engine.h  halley.h  layers.h  packer.h
libserene/include/serene/passes/: passes.td
libserene/include/serene/reader/: reader.h  traits.h
libserene/include/serene/slir/: CMakeLists.txt  dialect.h  dialect.td  ops.h  ops.td  symbol.h  traits.h  type_converter.h  types.h  types.td  utils.h
libserene/include/serene/types/: types.h
libserene/lib/: CMakeLists.txt  context.cpp  diagnostics.cpp  errors.cpp  fs.cpp  namespace.cpp  serene.cpp  source_mgr.cpp
libserene/lib/exprs/: call.cpp  def.cpp  fn.cpp  number.cpp
libserene/lib/jit/: engine.cpp  halley.cpp  packer.cpp
libserene/lib/passes/: slir_lowering.cpp  to_llvm_dialect.cpp
libserene/lib/reader/: reader.cpp
libserene/lib/slir/: dialect.cpp  generatable.cpp  ops.cpp  slir.cpp  type_converter.cpp  types.cpp  utils.cpp
libserene/tests/: CMakeLists.txt  context_tests.cpp.inc  environment_tests.cpp.inc  namespace_tests.cpp.inc  serenetests.cpp  setup.cpp.inc  test_helpers.cpp.inc  traits_tests.cpp.inc  utils_tests.cpp.inc
libserene/tests/errors/: error_tests.cpp.inc
libserene/tests/exprs/: expression_tests.cpp.inc  list_tests.cpp.inc  number_tests.cpp.inc  symbol_tests.cpp.inc
libserene/tests/reader/: reader_tests.cpp.inc
scripts/: containers.sh  deps.sh  devfs.sh  devfs_container_setup.sh  git-pre-commit-format  include-fixer.sh  pre-commit  pre-hook  utils.sh
serene-repl/: CMakeLists.txt  serene-repl.cpp
serene-tblgen/: CMakeLists.txt  main.cpp
serene-tblgen/serene/: errors-backend.cpp  errors-backend.h
serenec/: CMakeLists.txt  serenec.cpp
src/: CMakeLists.txt  ast.rs  builtins.rs  cli.yml  compiler.cpp  compiler.rs  core.rs  error.cpp  expr.rs  grammer.lalrpop  libserene.cpp  list.cpp  main.rs  namespace.cpp  namespace.rs  number.cpp  reader.cpp  reader.rs  scope.rs  serene.cpp  state.cpp  symbol.cpp  types.rs  values.rs
src/builtins/: def.rs
src/collections/: list.rs
src/exprs/: expression.cpp  list.cpp  number.cpp  symbol.cpp
src/libserene/: CMakeLists.txt  context.cpp  diagnostics.cpp  jit.cpp  namespace.cpp  semantics.cpp  serene.cpp  source_mgr.cpp
src/libserene/errors/: error.cpp
src/libserene/exprs/: call.cpp  def.cpp  expression.cpp  fn.cpp  list.cpp  number.cpp  symbol.cpp
src/libserene/jit/: engine.cpp  halley.cpp  layers.cpp
src/libserene/passes/: slir_lowering.cpp  to_llvm_dialect.cpp
src/libserene/reader/: location.cpp  reader.cpp  semantics.cpp
src/libserene/slir/: dialect.cpp  generatable.cpp  ops.cpp  slir.cpp  utils.cpp  value_op.cpp
src/reader/: errors.cpp  location.cpp  reader.cpp  semantics.cpp
src/serene/: CMakeLists.txt  context.cpp  diagnostics.cpp  error.cpp  jit.cpp  namespace.cpp  number.cpp  serene.cpp  source_mgr.cpp  symbol.cpp
src/serene-repl/: CMakeLists.txt  serene-repl.cpp
src/serene-repl/serene/: linenoise.h
src/serene/errors/: error.cpp
src/serene/exprs/: call.cpp  def.cpp  error.cpp  expression.cpp  fn.cpp  list.cpp  number.cpp  symbol.cpp
src/serene/passes/: slir_lowering.cpp  to_llvm_dialect.cpp
src/serene/reader/: location.cpp  reader.cpp  semantics.cpp
src/serene/sir/: dialect.cpp  generator.cpp  sir.cpp
src/serene/slir/: dialect.cpp  generatable.cpp  generator.cpp  ops.cpp  slir.cpp  utils.cpp  value_op.cpp
src/serenec/: CMakeLists.txt  serenec.cpp
src/sir/: dialect.cpp  generator.cpp  sir.cpp  value_op.cpp
src/special_forms/: def.cpp
src/tests/: CMakeLists.txt  context_tests.cpp.inc  environment_tests.cpp.inc  namespace_tests.cpp.inc  serenetests.cpp  test_helpers.cpp.inc  traits_tests.cpp.inc  utils_tests.cpp.inc
src/tests/errors/: error_tests.cpp.inc
src/tests/exprs/: error_tests.cpp.inc  expression_tests.cpp.inc  list_tests.cpp.inc  number_tests.cpp.inc  symbol_tests.cpp.inc
src/tests/reader/: reader_tests.cpp.inc
src/tests/traits/: trait_tests.cpp.inc
src/types/: core.rs  list.rs  number.rs  symbol.rs
src/types/collections/: core.rs  list.rs
tests/: CMakeLists.txt  serenetests.cpp  test_helpers.cpp.inc  utils.cpp.inc
tools/: CMakeLists.txt
tools/tbl-srn/: CMakeLists.txt  errors-backend.cpp  main.cpp
tools/tbl-srn/serene/: errors-backend.cpp  errors-backend.h
(+175 files in other folders)
