[package]
name = "serene"
version = "0.1.0"
authors = ["Sameer Rahmani <lxsameer@gnu.org>"]
edition = "2018"
repository = "https://gitlab.com/serene-lang/serene"
homepage = "https://serene-lang.org"

license = "GPL-2.0"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI library
clap = { version = "3.0.0-beta.1", features = ["yaml"] }

[dev-dependencies]
rusty-hook = "^0.11.2"